--- a/appinfo.json
+++ b/appinfo.json
@@ -4,20 +4,15 @@
         ""
     ],
     "companyName": "joseph.aylor@gmail.com",
-    "enableMultiJS": true,
     "longName": "Verbose",
     "projectType": "native",
     "resources": {
         "media": []
     },
-    "sdkVersion": "3",
+    "sdkVersion": "2",
     "shortName": "Verbose",
-    "targetPlatforms": [
-        "aplite",
-        "basalt",
-        "chalk"
-    ],
     "uuid": "0b8ad895-88ea-4543-adf0-db0d2eb71836",
+    "versionCode": 1,
     "versionLabel": "1.0",
     "watchapp": {
         "watchface": true
